Fixes sync training, ensuring that parameters are collected correctly.

--- a/analysis/1.1-return-to-base.ipynb
+++ b/analysis/1.1-return-to-base.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 5,
    "id": "21fa1cdb-97fc-4a18-bf15-9374d4ceaeff",
    "metadata": {},
    "outputs": [],
@@ -31,16 +31,20 @@
     "\n",
     "import sys\n",
     "sys.path.append('../src')\n",
-    "import torch"
+    "import torch\n",
+    "\n",
+    "from pathlib import Path"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "40b5f543-ab97-46a3-a275-ebcb9d45cd85",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from models.TTA_model import ClassifierWithTTA"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -436,7 +440,9 @@
   {
    "cell_type": "markdown",
    "id": "413de94b-a6cd-4766-b83c-49ee8bc44699",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "### Debug: sync models produce low accuracies\n",
     "\n",
@@ -522,9 +528,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "4779e2bc-1966-46ce-8b33-99592b3fd339",
+   "metadata": {},
+   "source": [
+    "Given that no encoding parameters should have been trained, this is odd.\n",
+    "\n",
+    "Problem solved: need to make sure to merge the trained back into the base model and save that, so that all the weights are saves."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2f3bdef2-1e9f-4351-b751-5e0113917d67",
+   "id": "6da1ab78-3765-466d-a0e2-e395a32c8afb",
    "metadata": {},
    "outputs": [],
    "source": []
